metrics: Fix variation flag loading on ash-chrome

Plumb through variations IDs in addition to parameters on chromeOS.

TEST=Set omnibox-on-focus-suggestions-contextual-web@2, verify that \
     trigger-id 3317583 is present in x-client-data when visiting   \
     https://www.google.com

Fixed: 805766
Change-Id: I5033828216d045cc544a1557f256005344e1c5e8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3664437
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Miriam Zimmerman <mutexlox@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1010627}